# OBIR

coap_server/: CMakeLists.txt  sdkconfig  test.bash
coap_server/main/: CMakeLists.txt  Makefile  sdkconfig
coap_server/main/include/: coap_handlers.h  rpn_stack.h
coap_server/main/src/: coap_handlers.c  coap_server.c  coap_server_main.c  rpn_stack.c
components/esp_libcoap/: CMakeLists.txt  call_graph.md
components/esp_libcoap/include/: address.h  async.h  bits.h  block.h  coap.h  coap_config.h  coap_debug.h  coap_hashkey.h  coap_io.h  coap_session.h  coap_time.h  encode.h  libcoap.h  mem.h  net.h  option.h  pdu.h  prng.h  resource.h  str.h  subscribe.h  uri.h
components/esp_libcoap/original/: README.md
components/esp_libcoap/original/libcoap/src/: coap_io.c
components/esp_libcoap/src/: address.c  async.c  block.c  coap_debug.c  coap_hashkey.c  coap_io.c  coap_session.c  coap_time.c  encode.c  net.c  option.c  pdu.c  resource.c  str.c  subscribe.c  uri.c
components/wifi_station/: CMakeLists.txt
components/wifi_station/include/: station.h
components/wifi_station/src/: station.c
doc/report/: report.bcf  report.tex
doc/report/listings/API/: get_example.c  loop.c  main.c  rpn.c
doc/report/listings/flow/: init.c  pdu_data_block.c  pdu_init.c  pdu_option.c  resource.c  resource_handler.c
doc/report/listings/resources/: rpn_variables.c
doc/report/listings/structures/: coap_context_t.c  coap_endpoint_t.c  coap_pdu_t.c  coap_resource_t.c  coap_session_t.c  coap_subscription_t.c
doc/report/listings/tests/: test.bash
(+3 files in other folders)
